<!--
  Copyright (c) 2013 - Alexandre Jorge Fonseca (alexjf.net)
  License: GPL v3 (http://www.gnu.org/licenses/gpl-3.0.txt)
-->
<resources>
    <!-- Application -->
    <string name="app_name_label">Application Name</string>
    <string name="app_name_value">Track My Money</string>
    <string name="app_version_label">Version</string>
    <string name="app_version_value">1.1.3</string>
    <string name="app_author_label">Author</string>
    <string name="app_author_value">Alexandre Fonseca</string>
    <string name="app_copyright">Copyright © 2013</string>
    <string name="app_website_label">Website</string>
    <string name="app_website_value">http://www.alexjf.net/projects/android/track-my-money</string>
    <!-- Activities -->
    <string name="menu_settings">Settings</string>
    <string name="title_activity_user_list">Track My Money</string>
    <string name="title_activity_user_add">Add User</string>
    <string name="title_activity_user_edit">Edit User</string>
    <string name="title_activity_moneynode_list">Money Nodes</string>
    <string name="title_activity_moneynode_add">Add Money Node</string>
    <string name="title_activity_moneynode_edit">Edit Money Node</string>
    <string name="title_activity_category_list">Categories</string>
    <string name="title_activity_category_add">Add Category</string>
    <string name="title_activity_category_edit">Edit Category</string>
    <string name="title_activity_immedtrans_add">Add Transaction</string>
    <string name="title_activity_immedtrans_edit">Edit Transaction</string>
    <string name="title_activity_immedtrans_details">Transaction Details</string>
    <string name="title_activity_filechooser">Choose a file</string>
    <!-- General -->
    <string name="add">Add</string>
    <string name="duplicate">Duplicate</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="icon">Icon:</string>
    <string name="choose">Choose...</string>
    <string name="currency">Currency:</string>
    <string name="value">Value:</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This week</string>
    <string name="last_week">Last week</string>
    <string name="this_month">This month</string>
    <string name="last_month">Last month</string>
    <string name="this_year">This year</string>
    <string name="all_time">All time</string>
    <string name="custom">Custom</string>
    <string name="list">List</string>
    <string name="stats">Stats</string>
    <string name="file_path">File path:</string>
    <string name="import_text">Import</string>
    <string name="export_text">Export</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="tabs">Tabs</string>
    <string name="swipe">Swipe</string>
    <string name="both">Both</string>
    <string name="file_select">Select a file</string>
    <string name="all">All</string>
    <!-- User Related -->
    <string name="login">Login</string>
    <string name="login_remember">Remember this login</string>
    <string name="addUser">Add new user</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="password_confirm">Confirm Password:</string>
    <string name="password_new">New Password:</string>
    <string name="password_old">Old Password:</string>
    <!-- Money Node Related -->
    <string name="moneyNode">Money node:</string>
    <string name="creationDate">Creation Date:</string>
    <string name="initialBalance">Initial Balance:</string>
    <string name="balance">Balance</string>
    <string name="balance_label">Balance:</string>
    <string name="income">Income</string>
    <string name="income_label">Income:</string>
    <string name="expense">Expense</string>
    <string name="expense_label">Expense:</string>
    <string name="moneynode_empty">There are no money nodes.\nPlease add one via the menu.</string>
    <string name="moneynode_nonselected">No money node selected</string>
    <!-- Transaction Related -->
    <string name="transaction_type_label">Transaction type:</string>
    <string name="total_transactions">Total transactions:</string>
    <string name="transaction_empty">There are no transactions.\nPlease add one via the menu.</string>
    <string name="addTransaction">Add new transaction</string>
    <string name="editTransaction">Edit transaction</string>
    <string name="executionDate">Execution Date:</string>
    <string name="transfer_check">Is this a transfer?</string>
    <string name="transfer_moneynode">From:</string>
    <string name="title_fragment_duplicate_trans">Duplicate transaction</string>
    <string name="duplicate_trans_moneynode">Destination:</string>
    <!-- Category Related -->
    <string name="category">Category:</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="category_empty">There are no categories.\nPlease add one via the menu.</string>
    <string name="category_nonselected">No category selected</string>
    <!-- Icon categories -->
    <string name="iconcat_transportation">Transportation</string>
    <string name="iconcat_people">People and Interaction</string>
    <string name="iconcat_fooddrink">Food and drink</string>
    <string name="iconcat_entertainment">Entertainment</string>
    <string name="iconcat_finance">Finance</string>
    <string name="iconcat_shopping">Shopping</string>
    <string name="iconcat_health">Health and Fitness</string>
    <string name="iconcat_science">Science/Education</string>
    <string name="iconcat_buildings">Buildings</string>
    <string name="iconcat_office">Office</string>
    <string name="iconcat_dev">Electronic Devices</string>
    <string name="iconcat_nature">Nature and Pets</string>
    <string name="iconcat_misc">Misc</string>
    <!-- DateIntervalBar Related -->
    <string name="date_interval">Date Interval:</string>
    <!-- Preferences -->
    <string name="pref_general">General</string>
    <string name="pref_default_currency">Default currency</string>
    <string name="pref_default_timeinterval">Default time interval</string>
    <string name="pref_interface">Interface</string>
    <string name="pref_tab_navigation">Tab navigation</string>
    <string name="pref_import_export_data">Import/Export Data</string>
    <string name="pref_import_data">Import</string>
    <string name="pref_import_data_summary">Import data from a CSV file</string>
    <string name="pref_export_data">Export</string>
    <string name="pref_export_data_summary">Export data to a CSV file</string>
    <string name="pref_backup_restore">Backup/Restore</string>
    <string name="pref_backup">Backup</string>
    <string name="pref_backup_summary">Backup entire database and settings</string>
    <string name="pref_restore">Restore</string>
    <string name="pref_restore_summary">Restore entire database and settings</string>
    <string name="pref_misc">Misc</string>
    <string name="pref_about">About</string>
    <!-- Menu -->
    <string name="menu_preferences">Preferences</string>
    <string name="menu_logout">Logout</string>
    <!-- Import -->
    <string name="import_replace">Replace existing matching data</string>
    <string name="import_success">Import successful!</string>
    <!-- Export -->
    <string name="export_share_check">Send to... after export</string>
    <string name="export_dateinterval_check">Limit date interval</string>
    <string name="export_share_title">Send to...</string>
    <string name="export_success">Export successful!</string>
    <!-- Backup -->
    <string name="backup_success">Backup successful!</string>
    <!-- Restore -->
    <string name="restore_success">Restore successful!</string>
    <!-- Loader messages -->
    <string name="loading">Loading...</string>
    <string name="analyzing_stats">Analyzing stats...</string>
    <string name="backingup">Backing up...</string>
    <string name="restoring">Restoring...</string>
    <string name="importing">Importing...</string>
    <string name="exporting">Exporting...</string>
    <!-- Errors -->
    <string name="error_name_not_empty">Name cannot be empty.</string>
    <string name="error_cat_name_already_exists">A category with that name already exists.</string>
    <string name="error_cat_determine_exists">Unable to determine if category already exists.</string>
    <string name="error_cat_add">Error adding category: %1$s.</string>
    <string name="error_cat_edit">Error editing category: %1$s.</string>
    <string name="error_cat_delete">Error deleting category.</string>
    <string name="error_trans_value_unspecified">You have to specify a value for the transaction.</string>
    <string name="error_trans_value_invalid">Invalid value. It must be a number or a mathematical expression.</string>
    <string name="error_trans_add">Error adding transaction: %1$s.</string>
    <string name="error_trans_duplicate">Error duplicating transaction: %1$s</string>
    <string name="error_trans_edit">Error editing transaction: %1$s.</string>
    <string name="error_stat_analysis">Stat analysis error: %1$s.</string>
    <string name="error_moneynode_name_already_exists">A money node with that name already exists.</string>
    <string name="error_moneynode_determine_exists">Unable to determine if node already exists.</string>
    <string name="error_moneynode_load_transactions">Error while loading transactions: %1$s.</string>
    <string name="error_moneynode_add">Error adding money node: %1$s.</string>
    <string name="error_moneynode_edit">Error editing money node: %1$s.</string>
    <string name="error_moneynode_delete">Error deleting money node.</string>
    <string name="error_username_not_empty">Username cannot be empty.</string>
    <string name="error_username_already_exists">Username already exists.</string>
    <string name="error_password_change">Failed to change password.</string>
    <string name="error_password_confirmation">Password confirmation doesn\'t match password.</string>
    <string name="error_wrong_password">Wrong password.</string>
    <string name="error_login_failed">Login failed for user \'%1$s\'.</string>
    <string name="error_import">Import error: %1$s.</string>
    <string name="error_export">Export error: %1$s.</string>
    <string name="error_backup">Backup error: %1$s.</string>
    <string name="error_restore">Restore error: %1$s.</string>
</resources>
