<!--
  Copyright (c) 2013 - Alexandre Jorge Fonseca (alexjf.net)
  License: GPL v3 (http://www.gnu.org/licenses/gpl-3.0.txt)
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/add"/>
    <item
        android:id="@+id/menu_manage_categories"
        android:orderInCategory="101"
        android:title="@string/manage_categories"/>
    <item
        android:id="@+id/menu_preferences"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/menu_preferences"/>
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/menu_logout"/>
</menu>