<!--
  Copyright (c) 2013 - Alexandre Jorge Fonseca (alexjf.net)
  License: GPL v3 (http://www.gnu.org/licenses/gpl-3.0.txt)
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp" >
    <TextView
        android:id="@+id/name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:text="@string/name" />
    <EditText
        android:id="@+id/name_text"
        android:inputType="textCapSentences"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/name_label"
        android:singleLine="true" />
    <TextView
        android:id="@+id/description_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/name_text"
        android:gravity="center_vertical"
        android:text="@string/description" />
    <EditText
        android:id="@+id/description_text"
        android:inputType="textCapSentences"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/description_label" />
    <LinearLayout
    	android:id="@+id/icon_wrapper"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/description_text">
	    <TextView
	        android:id="@+id/icon_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/icon" />
	    <net.alexjf.tmm.views.SelectorButton
	        android:id="@+id/icon_selector"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose" />
	</LinearLayout>
	<LinearLayout
    	android:id="@+id/creationDate_wrapper"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/icon_wrapper">
	    <TextView
	        android:id="@+id/creationDate_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/creationDate" />
	    <Button
	        android:id="@+id/creationDate_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:freezesText="true" />
	</LinearLayout>
    <TableLayout
    	android:id="@+id/initialBalance_wrapper"
    	android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/creationDate_wrapper"
    	android:stretchColumns="0">
	    <TableRow
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content">
		    <TextView
		        android:id="@+id/initialBalance_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:text="@string/initialBalance" />
		    <TextView
		        android:id="@+id/currency_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:text="@string/currency" />
	    </TableRow>
	    <TableRow
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content">
		    <EditText
		        android:id="@+id/initialBalance_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="number|numberSigned|numberDecimal"
		        android:layout_gravity="center_vertical"
		        android:singleLine="true" />
		    <Spinner
		        android:id="@+id/currency_spinner"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:entries="@array/currencies" />
	    </TableRow>
	</TableLayout>
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/initialBalance_wrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/add" />
</RelativeLayout>
