<!--
  Copyright (c) 2013 - Alexandre Jorge Fonseca (alexjf.net)
  License: GPL v3 (http://www.gnu.org/licenses/gpl-3.0.txt)
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp" >
    <LinearLayout
    	android:id="@+id/name_wrapper"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_vertical"
    	android:orientation="horizontal">
	    <TextView
	        android:id="@+id/name_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/name" />
	    <EditText
	        android:id="@+id/name_text"
	        android:inputType="textCapSentences"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:singleLine="true" />
	</LinearLayout>
    <LinearLayout
    	android:id="@+id/icon_wrapper"
    	android:layout_below="@id/name_wrapper"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_vertical"
    	android:orientation="horizontal">
	    <TextView
	        android:id="@+id/icon_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/icon" />
	    <net.alexjf.tmm.views.SelectorButton
	        android:id="@+id/icon_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose" />
    </LinearLayout>
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_wrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/add" />
</RelativeLayout>
