<!--
  Copyright (c) 2013 - Alexandre Jorge Fonseca (alexjf.net)
  License: GPL v3 (http://www.gnu.org/licenses/gpl-3.0.txt)
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
	<TextView
			android:id="@+id/logo_symbol"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1.25"
			android:gravity="center_horizontal|bottom"
			android:shadowDx="1"
			android:shadowDy="1"
			android:shadowRadius="1"
			android:text="€"
			android:textSize="120dp"
			android:textStyle="bold"/>
	<TextView
			android:id="@+id/logo_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:gravity="center_horizontal"
			android:shadowDx="1"
			android:shadowDy="1"
			android:shadowRadius="1"
			android:text="@string/title_activity_user_list"
			android:textSize="32dp"
			android:textStyle="bold"/>
	<ListView
			android:id="@+id/user_list"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:layout_marginTop="10dp"
			android:layout_weight="1"
			android:cacheColorHint="@color/user_bg_normal"
			android:choiceMode="singleChoice"
			android:divider="#FFFFFF"/>
	<RelativeLayout
			android:id="@+id/userpassword_layout"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="0"
			android:padding="5dp">
		<TextView
				android:id="@+id/userpassword_label"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_alignBottom="@+id/userpassword_text"
				android:layout_alignParentLeft="true"
				android:layout_alignTop="@id/userpassword_text"
				android:layout_marginRight="5dp"
				android:gravity="center_vertical"
				android:text="@string/password"/>
		<EditText
				android:id="@id/userpassword_text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_toLeftOf="@+id/userpassword_login"
				android:layout_toRightOf="@id/userpassword_label"
				android:password="true"
				android:singleLine="true"/>
		<Button
				android:id="@id/userpassword_login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:text="@string/login"/>
		<CheckBox
				android:id="@+id/remember_login"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/userpassword_text"
				android:text="@string/login_remember"/>
	</RelativeLayout>
</LinearLayout>
