<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013 - Alexandre Jorge Fonseca (alexjf.net)
  License: GPL v3 (http://www.gnu.org/licenses/gpl-3.0.txt)
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:padding="15dp">
	<RelativeLayout
			android:id="@+id/balance_panel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<TextView
				android:id="@+id/balance_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:text="@string/balance_label"/>
		<TextView
				android:id="@+id/balance_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@id/balance_label"
				android:layout_marginLeft="5dp"/>
		<TextView
				android:id="@+id/total_transactions_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginRight="5dp"
				android:layout_toRightOf="@id/balance_value"
				android:layout_toLeftOf="@+id/total_transactions_value"
				android:gravity="right|center_vertical"
				android:text="@string/total_transactions"/>
		<TextView
				android:id="@id/total_transactions_value"
				android:layout_width="wrap_content"
				android:layout_toLeftOf="@+id/balance_more_button"
				android:layout_height="wrap_content"/>
		<ImageView
				android:id="@id/balance_more_button"
				android:layout_width="12dp"
				android:layout_height="0dp"
				android:layout_marginLeft="5dp"
				android:layout_alignParentRight="true"
				android:layout_alignBottom="@id/total_transactions_value"
				android:layout_alignTop="@id/total_transactions_value"
				android:scaleType="centerInside"
				android:src="@drawable/toggle_down"/>
		<RelativeLayout
				android:id="@+id/balance_details_panel"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_below="@id/balance_value">
			<LinearLayout
					android:id="@+id/initial_balance_line"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:visibility="gone">
				<TextView
						android:id="@+id/initial_balance_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/initialBalance"/>
				<TextView
						android:id="@+id/initial_balance_value"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_marginLeft="5dp"
						android:layout_weight="1"/>
			</LinearLayout>
			<TextView
					android:id="@+id/income_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/initial_balance_line"
					android:text="@string/income_label"/>
			<TextView
					android:id="@+id/income_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="5dp"
					android:layout_toRightOf="@id/income_label"
					android:layout_below="@id/initial_balance_line"
					android:textColor="@color/positive"/>
			<TextView
					android:id="@+id/expense_label"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:layout_toLeftOf="@+id/expense_value"
					android:layout_toRightOf="@id/income_value"
					android:layout_below="@id/initial_balance_line"
					android:gravity="right|center_vertical"
					android:text="@string/expense_label"/>
			<TextView
					android:id="@id/expense_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_below="@id/initial_balance_line"
					android:textColor="@color/negative"/>
		</RelativeLayout>
	</RelativeLayout>
	<android.support.v4.view.ViewPager
			android:id="@+id/view_pager"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:layout_marginTop="5dp"/>
	<fragment
			android:id="@+id/dateinterval_bar"
			android:name="net.alexjf.tmm.fragments.DateIntervalBarFragment"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
</LinearLayout>
